--- a/emp-lib/pom.xml
+++ b/emp-lib/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>kakoli.sample.maven</groupId>
 	<artifactId>emp-lib</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>product-model</name>
+	<name>emp-lib</name>
 	<description>Product Entity</description>
 	<properties>
 		<java.version>17</java.version>
