--- a/spring-db-config-client/pom.xml
+++ b/spring-db-config-client/pom.xml
@@ -9,15 +9,19 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>kakoli.sample.maven</groupId>
-	<artifactId>spring-db</artifactId>
+	<artifactId>spring-db-config-client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-db</name>
-	<description>Demo for Spring-boot JPA, JDBC </description>
+	<name>spring-db-config-client</name>
+	<description>Spring Cloud Config client app </description>
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
