Created unit test for controller

--- a/spring-db-config-client/src/main/resources/application.properties
+++ b/spring-db-config-client/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port=8080
 spring.application.name=spring-db-config-client
 spring.config.import=optional:configserver:http://localhost:8888
 spring.profiles.active=myprofile
+
+# Db properties are taken from Git repo. config-props, branch dev, file config-props/spring-db-config-client-myprofile.properties
 #logging.level.com.zaxxer.hikari=DEBUG
 
 # JPA related
