--- a/spring-db/src/main/resources/application.properties
+++ b/spring-db/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-logging.level.root=WARN
+logging.level.root=INFO
 
 # JPA related
 spring.jpa.show-sql=true
 #oracle.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 #spring.jpa.hibernate.ddl-auto=none,validate
 
-spring.cloud.config.enabled=false
+#spring.cloud.config.enabled=false
 
