--- a/emp-lib/pom.xml
+++ b/emp-lib/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>emp-lib</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>emp-lib</name>
-	<description>Product Entity</description>
+	<description>JPA Entity, Model classes</description>
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
